# python_scripts

./: .cursorignore  .gitignore  .pre-commit-config.yaml  clean.py  clean.yaml  clean_here.py  ffmpeg_concat.py  hierarchy.py  profile.py  pyproject.toml  readme.md  reddit_archive.py  requirements.txt  robai.py  streamlit_app.py  test_clean.py  testhierarchy.py  testtextframe.py  textframe.py
config/: clean.toml  clean.yaml
docs/: README.md  index.md  textframe.md
docs/rob/: anagram.md  clean.md  english.md  ffmpeg.md  homework.md  night.md  project.md  reddit_archive.md  ticktick.md  utilities.md
rob/: .autoenv  .justfile  .leave  __main__.py  algebra.py  anagram.py  clean.py  email.py  english.py  ffmpeg.py  help.py  hierarchy.py  homework.py  night.py  old_algebra.py  old_clean.py  poetry.note  project.py  pyproject.toml  reddit_archive.py  robai.py  tick.py  tomldict.py  tomlshelve.py
rob/algebra/: problems.py
rob/cli/: anagram_config.toml  homework_config.toml
rob/cli config/: night_config.toml
rob/config/: clean.toml
rob/config/algebra/: config.toml  latex_templates.toml
rob/config/anagram/: cli_config.toml
rob/config/english/: config.toml  latex_templates.toml
rob/config/homework/: config.toml  latex_templates.toml
rob/config/project/: jinja_template.txt
rob/data/: sat_words.txt  word_list.txt
rob/deprecated/: hierarchy.py  tick.py
rob/loggers/: tick_logger.py
rob/parser/: clean_parser.py  email_parser.py  ffmpeg_parser.py  reddit_parser.py  tick_parser.py
rob/problems/: algebra.py  chemistry.py
rob/tests/: test_algebra.py  test_algebra_problems.py  test_cli.py  test_homework_cli.py  test_query.py  test_tomldict.py
rob/ticktick/: api.py  cache.py  oauth2.py
rob/ticktick/helpers/: hex_color.py  time_methods.py  timezones.txt
rob/ticktick/managers/: check_logged_in.py  focus.py  habits.py  pomo.py  projects.py  settings.py  tags.py  tasks.py
rob/utilities/: __init__.py  cli.py  editabledict.py  interdict.py  perf_timer.py  query.py  tomlconfig.py  tomldict.py  tomlshelve.py
rob/utilities/cli/: cli_config.toml
rob/utilities/config/cli/: cli.toml
tests/: test_clean.py
