[tool.poetry]
name = "robolson"
version = "0.1.0"
description = "My collection of utilty scripts"
authors = ["Rob L Olson <rob.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^11.2.0"
toml = "^0.10.2"
praw = "^7.5.0"
openai = "^0.15.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
