[tool.poetry]
name = "robolson"
version = "0.3.88"
description = "My collection of utilty scripts"
authors = ["Rob L Olson <rob.louis@gmail.com>"]
include = ["config/clean.toml", "config/english/latex_templates.toml", "config/english/config.toml", "config/algebra/config.toml", "config/english/latex_templates.toml", "pyproject.toml", "data/word_list.txt"]
exclude = []
packages = [
    {include="rob", from=".."},
    {include="parser"},
    {include="loggers"},
    {include="ticktick"}
]

[tool.poetry.dependencies]
python = "^3.9.1"
rich = "^11.2.0"
toml = "^0.10.2"
praw = "^7.5.0"
openai = "^1.6.1"
pydub = "0.25.1"
appdirs = "^1.4.4"
deal = "^4.23.2"
redmail = "^0.4.0"
docopt = "^0.6.2"
typer = {extras = ["all"], version = "^0.7.0"}
pycaw = "^20230407"
rocketry = "^2.5.1"
WMI = "^1.5.1"
gkeepapi = "^0.14.2"
sympy = "^1.12"
survey = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.54.1"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.pyright]
include = ["C:\\Users\\sterl\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\robolson-tTkljxzG-py3.10\\Lib\\site-packages"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
